--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
      body{
         text-align: center;
-        background:url("/assets/afif_bg.jpg");
+        background:url("assets/afif_bg.jpg");
         background-position:center;
         background-size: auto;
         background-repeat:no-repeat;
